# sample-index-page-with-ai-agent

./: .dockerignore  .env.example  .gitignore  .spark-initial-sha  CLAUDE.md  Dockerfile  LICENSE  PRD.md  README.md  README_ja.md  docker-compose.yml  index.html  package-lock.json  package.json  spark.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker-push.yml  manual-cleanup.yml  manual-deploy.yml  pr.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  azure_agent.py  azure_agent_sample.py  main.py  models.py  pyproject.toml  requirements.txt  test_api_integration.py  test_azure_agent.py  test_azure_agent_sample.py  test_models.py
backend/data/: banners.json  content.json
backend/script/: bootstrap  server
frontend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/nginx/: default.conf  nginx.conf
frontend/script/: bootstrap  server
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: Banner.tsx  ContentList.tsx  Header.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/lib/: config.ts
infra/: main.bicep  main.bicepparam  resources.bicep  resources.json
nginx/: default.conf  nginx.conf
script/: backend-server  bootstrap  ci-test  compose-bootstrap  compose-server  compose-shutdown  docker-bootstrap  docker-build  docker-server  docker-shutdown  setup
src/components/: Banner.tsx  ContentList.tsx  Header.tsx
(+3 files in other folders)
