[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-index-backend"
version = "0.1.0"
description = "Backend API for content index page"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.19",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "azure-ai-projects==1.1.0b2",
    "azure-identity>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "httpx",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
